                                                                -*- outline -*-
* Solvers now handle constraints with right hand sides in Lie groups.
* A mask has been added to class Implicit to select which lines of the
  constraint should be taken into account (active rows).
New in 4.10.0
* ConvexShapeContact classes have been improved.
  - stable position of objects is now unique for any right hand side value of
    the complement constraint.
* Use cmake to handle dependencies (cmake submodule).
* Architecture of constraint classes has been simplified.
* Use Romeo instead of Baxter in tests.
* Enable users to use GenericTransformation with a joint2 equal to 0x0.
* Add serialization functions.
New in 4.9.0
* Computation of constraint right hand side have been fixed
  - in ExplicitConstraintSet, the computation was wrong, it has been fixed,
  - in Implicit, the computation has been made similar to the one in
    HierarchicalIterative.
* Template flag definitions in GenericTransformation have been fixed
  - to comply with C++11 standard.
* throw declaration have been removed to comply with C++11 standard.
* Configuration variable RUN_TESTS has benn replaced by BUILD_TESTING
  - for homogeneity with other hpp packages.

New in 4.8.0
* Wrong indentation in output stream has been fixed.

New in 4.7.0
* Class HierarchicalIterative
  - a bug in right hand side getter by constraint has been fixed,
  - a getter to numerical constraints has been added. It returns the implicit
    and explicit constraints,
  - a method computing whether a solver solution manifold is a submanifold of
    another solver solution manifold has been added,
  - method merge adds the constraints of another solver to this one.
* Class Implicit has been cleaned up
  - methods setting and getting the right hand side are not deprecated anymore,
  - deprecated methods have been remove.

New in 4.6.0
* Class Implicit has been improved.