@@ -136,7 +136,7 @@ namespace hpp {
     const int RelativeBit       = 0x1;
     const int PositionBit       = 0x2;
     const int OrientationBit    = 0x4;
-    const int OutputSE3Bit      = 0x8;
+    const int OutputR3xSO3Bit      = 0x8;
     /// \endcond DEVEL
     typedef GenericTransformation<               PositionBit | OrientationBit > Transformation;
     typedef GenericTransformation<               PositionBit                  > Position;
@@ -144,10 +144,10 @@ namespace hpp {
     typedef GenericTransformation< RelativeBit | PositionBit | OrientationBit > RelativeTransformation;
     typedef GenericTransformation< RelativeBit | PositionBit                  > RelativePosition;
     typedef GenericTransformation< RelativeBit |               OrientationBit > RelativeOrientation;
-    typedef GenericTransformation<               PositionBit | OrientationBit | OutputSE3Bit > TransformationSE3;
-    typedef GenericTransformation< RelativeBit | PositionBit | OrientationBit | OutputSE3Bit > RelativeTransformationR3xSO3;
-    typedef GenericTransformation<                             OrientationBit | OutputSE3Bit > OrientationSO3;
-    typedef GenericTransformation< RelativeBit |               OrientationBit | OutputSE3Bit > RelativeOrientationSO3;
+    typedef GenericTransformation<               PositionBit | OrientationBit | OutputR3xSO3Bit > TransformationR3xSO3;
+    typedef GenericTransformation< RelativeBit | PositionBit | OrientationBit | OutputR3xSO3Bit > RelativeTransformationR3xSO3;
+    typedef GenericTransformation<                             OrientationBit | OutputR3xSO3Bit > OrientationSO3;
+    typedef GenericTransformation< RelativeBit |               OrientationBit | OutputR3xSO3Bit > RelativeOrientationSO3;
 
     typedef boost::shared_ptr<Position> PositionPtr_t;
     typedef boost::shared_ptr<Orientation> OrientationPtr_t;
