@@ -212,7 +212,7 @@ namespace hpp {
           }
           if (active){ // If at least one element of adp is true
 	    for (const segment_t s : constraints [i]->activeRows()) {
-	      rows.push_back(segment_t(s.first+row, s.second));
+	      rows.emplace_back(s.first+row, s.second);
 	    }
 	  }
           row += constraints [i]->function ().outputDerivativeSize();
