@@ -176,11 +176,12 @@ BOOST_AUTO_TEST_CASE (jacobian) {
   functions.push_back (
       Transformation::create ("Transformation", device, ee1, tf1));
   functions.push_back (
-      TransformationSE3::create ("TransformationSE3", device, ee1, tf1));
+      TransformationR3xSO3::create ("TransformationR3xSO3", device, ee1, tf1));
   functions.push_back (
       RelativeTransformation::create ("RelativeTransformation", device, ee1, ee2, tf1, tf2));
   functions.push_back (
-      RelativeTransformationR3xSO3::create ("RelativeTransformationR3xSO3", device, ee1, ee2, tf1, tf2));
+      RelativeTransformationR3xSO3::create
+      ("RelativeTransformationR3xSO3", device, ee1, ee2, tf1, tf2));
   functions.push_back (
       createConvexShapeContact_triangles (device, ee1, "ConvexShapeContact triangle"));
   functions.push_back (
